--- a/src/stylus/components/candidate.styl
+++ b/src/stylus/components/candidate.styl
@@ -22,6 +22,7 @@
     background-size 30px auto
     border 1px solid #eee
     border-radius 10px
+    overflow hidden
 
     &[src]
       filter grayscale(100%)
